docs/0.6.0/_sources/generated/skbio.metadata.NumericMetadataColumn.rst.txt

skbio.metadata.NumericMetadataColumn
====================================




   

   

   
      
   

   

   
      
   

   

   
      
   

   
      
   

   

   

   
      
   

   
      
   

   
      
   

   

   

   

   

   

   

   
      
   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   


.. currentmodule:: skbio.metadata

.. autoclass:: NumericMetadataColumn

   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NumericMetadataColumn.id_count
      ~NumericMetadataColumn.id_header
      ~NumericMetadataColumn.ids
      ~NumericMetadataColumn.missing_scheme
      ~NumericMetadataColumn.name
      ~NumericMetadataColumn.type
   

   
   .. rubric:: Built-ins

   .. autosummary::
      :toctree:
   
      ~NumericMetadataColumn.__eq__
      ~NumericMetadataColumn.__ge__
      ~NumericMetadataColumn.__getstate__
      ~NumericMetadataColumn.__gt__
      ~NumericMetadataColumn.__le__
      ~NumericMetadataColumn.__lt__
      ~NumericMetadataColumn.__ne__
      ~NumericMetadataColumn.__str__
   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      ~NumericMetadataColumn.drop_missing_values
      
      
      ~NumericMetadataColumn.filter_ids
      
      
      ~NumericMetadataColumn.get_ids
      
      
      ~NumericMetadataColumn.get_missing
      
      
      ~NumericMetadataColumn.get_value
      
      
      ~NumericMetadataColumn.has_missing_values
      
      
      ~NumericMetadataColumn.save
      
      
      ~NumericMetadataColumn.to_dataframe
      
      
      ~NumericMetadataColumn.to_series
      
   