docs/0.7.4/_sources/generated/skbio.metadata.NumericMetadataColumn.rst.txt

skbio.metadata.NumericMetadataColumn
====================================







   

   

   
      
   

   

   
      
   

   

   
      
   

   
      
   

   

   

   
      
   

   
      
   

   
      
   

   

   

   

   

   

   

   
      
   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   








   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   





   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   

   
      
         
      
   





   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   





.. currentmodule:: skbio.metadata

.. autoclass:: NumericMetadataColumn




   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NumericMetadataColumn.supported_dtypes
      ~NumericMetadataColumn.type
   

   
   .. rubric:: Attributes (inherited)

   .. autoinherit::
   
      ~NumericMetadataColumn.id_count
      ~NumericMetadataColumn.id_header
      ~NumericMetadataColumn.ids
      ~NumericMetadataColumn.missing_scheme
      ~NumericMetadataColumn.name
   
   

   
   

   
   .. rubric:: Methods (inherited)

   .. autoinherit::
      ~NumericMetadataColumn.drop_missing_values
      ~NumericMetadataColumn.filter_ids
      ~NumericMetadataColumn.get_ids
      ~NumericMetadataColumn.get_missing
      ~NumericMetadataColumn.get_value
      ~NumericMetadataColumn.has_missing_values
      ~NumericMetadataColumn.read
      ~NumericMetadataColumn.save
      ~NumericMetadataColumn.to_dataframe
      ~NumericMetadataColumn.to_series
      ~NumericMetadataColumn.write
   
   

   
   

   
   .. rubric:: Special methods (inherited)

   .. autoinherit::
   
      ~NumericMetadataColumn.__eq__
      ~NumericMetadataColumn.__ge__
      ~NumericMetadataColumn.__getstate__
      ~NumericMetadataColumn.__gt__
      ~NumericMetadataColumn.__le__
      ~NumericMetadataColumn.__lt__
      ~NumericMetadataColumn.__ne__
      ~NumericMetadataColumn.__str__
   
   




   
   .. rubric:: Details

   
   
   .. autoattribute:: NumericMetadataColumn.supported_dtypes
   
   
   
   .. autoattribute:: NumericMetadataColumn.type
   
   

   
   